# demand-forecast

./: .env.duckdns.example  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.duckdns.yml  docker-compose.prod.yml  docker-compose.yml  render.yaml  vercel.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/services/: feature_engineering.py  forecasting.py  metrics.py  model_registry.py  tuning.py  visualization.py
backend/app/workers/: job_runner.py
backend/data/demo/: demand_demo_cn.csv
deploy/: Caddyfile
deploy/systemd/: demand-forecast.service
docs/: demo-quickstart-zh.md  model-parameter-guide.md  platform-architecture.md  production-deploy-zh.md  render-deploy-zh.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  modelKnowledge.ts  styles.css  types.ts
scripts/: demo.sh  longterm.sh  prod.sh  share.sh  stable_bootstrap.sh  vercel_sync_api.sh
