[project]
name = "demand-forecast-backend"
version = "0.1.0"
description = "Enterprise demand forecasting platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.1",
  "optuna>=3.6.1",
  "plotly>=5.23.0",
  "statsforecast>=1.7.8",
  "statsmodels>=0.14.2",
  "orjson>=3.10.7"
]

[project.optional-dependencies]
advanced = [
  "prophet>=1.1.5",
  "xgboost>=2.1.1",
  "lightgbm>=4.5.0",
  "catboost>=1.2.5",
  "neuralforecast>=1.7.5",
  "torch>=2.3.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
